--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 
 ## Changes
 
+### 0.2.0 (2018-09-03)
+
+- Added more documentation
+- Fixed bug from recent +f/+rf PR
+
 ### 0.1.3 (2016-06-25)
 
 - Fixed various bugs
