--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,17 +1,17 @@
 
 ## Changes
 
+### 1.0.1 (2019-02-04)
+
+
 ### 1.0.0 (2019-02-04)
 
-API Changes:
-
+- API Changes:
 - Dropping CRS wrapper class, instead handling GeogCS or ProjCS directly
 - Change module names to load.py, and parse.py
 - Move Ellipsoid, Datum, and Projection to their respective modules
 - Allow proj4 input and output as dict
-
-Fixes:
-
+- Fixes:
 - Added more documentation
 - Fix +f interpretation
 - Include reading +rf parameter
